# xmobar-freebsd

./: Commands.hs  Config.hs  HsLocale.hsc  Main.hs  Parsers.hs  Plugins.hs  README  README.html  Runnable.hs  Runnable.hs-boot  Setup.lhs  XMobar.hs  XUtil.hsc  Xmobar.hs  monitor.hs  xmobar.cabal  xmobar.config-sample  xmobar.css  xmobar.hs
Monitors/: Batt.hs  Common.hs  Cpu.hs  Mem.hs  Net.hs  Swap.hs  Weather.hs
Plugins/: CommandReader.hs  Date.hs  EWMH.hs  HelloWorld.hs  Mail.hs  Monitors.hs  PipeReader.hs  StdinReader.hs  XMonadLog.hs  helloworld.config
Plugins/Monitors/: Batt.hs  Common.hs  CoreCommon.hs  CoreTemp.hs  Cpu.hs  CpuFreq.hs  Mem.hs  Net.hs  Swap.hs  Thermal.hs  Weather.hs
scripts/: xmonadpropwrite.hs
