name:               xmobar
version:            0.7
homepage:           http://gorgias.mine.nu/repos/xmobar/
synopsis:           A Minimalistic Text Based Status Bar
description: 	    Xmobar is a minimalistic text based status bar.
		    .
                    Inspired by the Ion3 status bar, it supports similar features, 
		    like dynamic color management, output templates, and extensibility 
                    through plugins.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unibz.it
build-depends:      base>=2.0, X11>=1.2.1, mtl>=1.0, unix>=1.0, parsec>=2.0, filepath>=1.0, 
		    X11-extras>=2.0

executable:         xmobar
main-is:            Main.hs
Hs-Source-Dirs:     ./
Other-Modules:      Xmobar, Config, Parsers, Commands, Runnable, Plugins, Monitors.Common, Monitors.Batt 
		    Monitors.Weather, Monitors.Swap, Monitors.Mem, Monitors.Cpu, Monitors.Net
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s -threaded
ghc-prof-options:   -prof -auto-all
